[gd_scene load_steps=11 format=3 uid="uid://b0ip4ngd4t2ij"]

[ext_resource type="Script" path="res://MainMenu/Script/MainMenu.gd" id="1_67a26"]
[ext_resource type="Theme" uid="uid://cw2b3g7skex55" path="res://Common/Themes/MainTheme.tres" id="2_7r8bo"]
[ext_resource type="Texture2D" uid="uid://daxcdc27pyy5a" path="res://Common/Assets/PocketLifeSplash.png" id="2_qyxsu"]
[ext_resource type="FontFile" uid="uid://7ds64a83kms3" path="res://Common/Fonts/Lonely Coffee.ttf" id="3_2a2vu"]
[ext_resource type="PackedScene" uid="uid://c2pw6km56va71" path="res://CreateLife/Scene/CreateLife.tscn" id="3_pb41p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dyg1e"]
bg_color = Color(0.486275, 0.756863, 0.541176, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.129412, 0.184314, 0.25098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_av2c3"]
bg_color = Color(0.129412, 0.184314, 0.25098, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="LabelSettings" id="LabelSettings_p73et"]
font = ExtResource("3_2a2vu")
font_size = 140
font_color = Color(0.952941, 0.941176, 0.894118, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ng6av"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.886275, 0.521569, 0.431373, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.129412, 0.184314, 0.25098, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="LabelSettings" id="LabelSettings_iuvs7"]
font = ExtResource("3_2a2vu")
font_size = 60

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_67a26")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dyg1e")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -450.0
offset_right = 450.0
offset_bottom = 1240.0
grow_horizontal = 2
theme_override_constants/margin_top = 150

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="IconPanel" type="Panel" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(900, 900)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_av2c3")

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/IconPanel"]
custom_minimum_size = Vector2(750, 750)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -295.0
offset_top = -200.0
offset_right = 295.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_qyxsu")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/IconPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 40

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/IconPanel/MarginContainer"]
layout_mode = 2
text = "Pocket Life"
label_settings = SubResource("LabelSettings_p73et")
horizontal_alignment = 1

[node name="ContinueLifeButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(500, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_7r8bo")
text = " Continue Life "

[node name="CreateLifeButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_7r8bo")
text = "Create Life"

[node name="AboutContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -100.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/AboutContainer"]
layout_mode = 2
alignment = 1

[node name="LoadErrorLabel" type="Label" parent="Panel/AboutContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2a2vu")
theme_override_styles/normal = SubResource("StyleBoxFlat_ng6av")
text = "Error loading
 previous game..."
label_settings = SubResource("LabelSettings_iuvs7")
horizontal_alignment = 1

[node name="Button" type="Button" parent="Panel/AboutContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 125)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_7r8bo")
text = "About"

[node name="CreateLife" parent="." instance=ExtResource("3_pb41p")]
visible = false
layout_mode = 1

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/ContinueLifeButton" to="." method="_on_continue_life_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/CreateLifeButton" to="." method="_on_create_life_button_pressed"]
[connection signal="menu_pressed" from="CreateLife" to="." method="_on_create_life_menu_pressed"]
